# myproject

./: Netflix Dashboard.twb  app.py  pyproject.toml
static/: style.css
templates/: index.html
